добавил разрывы строк в текст. блоки у detail, booking, gallery и стили их отображения

--- a/source/sass/layout/index/booking.scss
+++ b/source/sass/layout/index/booking.scss
@@ -46,4 +46,10 @@
 .booking__text {
   margin-top: 0;
   margin-bottom: 0;
+
+  @media (max-width: $tablet-width-min) {
+    br {
+      display: none;
+    }
+  }
 }
