--- a/source/sass/layout/form/review-form.scss
+++ b/source/sass/layout/form/review-form.scss
@@ -2,13 +2,18 @@
   display: flex;
   flex-direction: column;
   margin: 0;
-  padding: 0 20px 48px;
+  margin-bottom: 48px;
 
   @media (min-width: $tablet-width-min) {
     flex-direction: row;
     flex-wrap: wrap;
     padding-left: 60px;
     padding-right: 60px;
+    margin-bottom: 61px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    margin-bottom: 66px;
   }
 
   // @media (min-width: $tablet-width-min) {
@@ -29,8 +34,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding-top: 20px;
-  padding-bottom: 25px;
+  padding: 20px 20px 25px;
 }
 
 .review-form__notif {
