--- a/source/sass/layout/form/review.scss
+++ b/source/sass/layout/form/review.scss
@@ -7,7 +7,12 @@
   @media (min-width: $tablet-width-min) {
     max-width: 435px;
     margin-top: 64px;
-    margin-bottom: 62px;
+    margin-bottom: 86px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    margin-top: 107px;
+    margin-bottom: 56px;
   }
 }
 
