задал 100% ширину инлайн svg в intro__decription-decor, исправил изменение высоты блоков detail__icon

--- a/source/sass/layout/index/detail.scss
+++ b/source/sass/layout/index/detail.scss
@@ -58,6 +58,7 @@
   @media (min-width: $tablet-width-min) {
     width: 76px;
     height: 75px;
+    flex-shrink: 0;
     margin-right: 0;
     margin-bottom: 26px;
   }
