добавил отдельно кнопку закрытия меню, переписал под нее скрипт; переоформил likes__icon в галерее; переименовал -size-wide-screen

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -4,7 +4,7 @@
 $main-font: "PT Sans", "Arial", sans-serif;
 $weight-norm: 400;
 $weight-bold: 700;
-$size-wide-screen: 30px;
+$font-size-wide-screen: 30px;
 
 // colors
 $bg-main: #ffffff;
