--- a/source/sass/layout/index/booking.scss
+++ b/source/sass/layout/index/booking.scss
@@ -35,7 +35,7 @@
 
   @media (min-width: $tablet-width-min) {
     margin-bottom: 25px;
-    font-size: $size-wide-screen;
+    font-size: $font-size-wide-screen;
   }
 
   @media (min-width: $desktop-width-min) {
