--- a/source/sass/layout/index/map.scss
+++ b/source/sass/layout/index/map.scss
@@ -1,13 +1,15 @@
 .map {
   display: flex;
   flex-direction: column;
+  padding-bottom: 10px;
+  background-color: $bg-main;
 }
 
 .map__content {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 10px;
+  line-height: 0;
 
   &::after {
     position: absolute;
@@ -17,7 +19,6 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
     background-image: url("../img/icon-map-marker.svg");
     background-repeat: no-repeat;
     background-position: center;
