--- a/source/sass/layout/photo/gallery.scss
+++ b/source/sass/layout/photo/gallery.scss
@@ -18,7 +18,7 @@
   margin-bottom: 27px;
 
   @media (min-width: $tablet-width-min) {
-    font-size: $size-wide-screen;
+    font-size: $font-size-wide-screen;
   }
 }
 
