--- a/source/sass/layout/photo/likes.scss
+++ b/source/sass/layout/photo/likes.scss
@@ -18,4 +18,9 @@
   width: 23px;
   height: 21px;
   margin-right: 14px;
+  opacity: 0.3;
+  background-image: url("../img/icon-like.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
 }
