--- a/source/sass/layout/form/field.scss
+++ b/source/sass/layout/form/field.scss
@@ -19,7 +19,7 @@
   }
 
   &--area {
-    height: 160px;
+    min-height: 160px;
     padding: 13px 23px 29px 21px;
     border: none;
     text-transform: none;
