--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -44,6 +44,7 @@
 @import "layout/photo/likes.scss";
 @import "layout/photo/likes-icon.scss";
 @import "layout/photo/video.scss";
+@import "layout/photo/player.scss";
 
 // form page
 @import "layout/form/review.scss";
