--- a/source/sass/layout/button-cross.scss
+++ b/source/sass/layout/button-cross.scss
@@ -1,5 +1,4 @@
 .button-cross {
-  display: none;
   position: absolute;
   top: 17px;
   right: 20px;
@@ -38,5 +37,9 @@
 
   &:active {
     opacity: 30%;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    display: none;
   }
 }
