--- a/source/sass/layout/photo/gallery.scss
+++ b/source/sass/layout/photo/gallery.scss
@@ -1,3 +1,13 @@
+.gallery__wrapper {
+  @media (min-width: $tablet-width-min) {
+    padding: 0 60px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    padding: 0;
+  }
+}
+
 .gallery__header {
   display: flex;
   flex-direction: column;
