ограничил ширину intro__header на стр формы, оформил popup-ы

--- a/source/sass/components/button.scss
+++ b/source/sass/components/button.scss
@@ -31,4 +31,11 @@
       flex-basis: 50%;
     }
   }
+
+  &--popup {
+    padding-top: 18px;
+    padding-bottom: 14px;
+    background-color: $bg-second;
+    color: #ffffff;
+  }
 }
