--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -53,6 +53,7 @@
 @import "layout/form/field.scss";
 @import "layout/form/field-icon.scss";
 @import "layout/form/checklist.scss";
+@import "layout/form/popup.scss";
 
 
 // COMPONENTS
