--- a/source/sass/layout/form/review-form.scss
+++ b/source/sass/layout/form/review-form.scss
@@ -1,4 +1,5 @@
 .review-form {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -15,14 +16,6 @@
   @media (min-width: $desktop-width-min) {
     margin-bottom: 66px;
   }
-
-  // @media (min-width: $tablet-width-min) {
-  //   display: grid;
-  //   grid-template-columns: 1fr 1fr;
-  //   grid-template-rows: 300px 250px 235px 240px 60px;
-  //   padding-left: 60px;
-  //   padding-right: 60px;
-  // }
 
   @media (min-width: $desktop-width-min) {
     padding-left: 120px;
