--- a/source/sass/layout/form/review.scss
+++ b/source/sass/layout/form/review.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 90%;
   margin: 36px auto 16px;
 
   @media (min-width: $tablet-width-min) {
