--- a/source/sass/layout/form/popup.scss
+++ b/source/sass/layout/form/popup.scss
@@ -7,7 +7,7 @@
   align-items: center;
   min-width: 320px;
   background-color: $bg-main;
-  box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
+  box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
   z-index: 1; //* в Firefox просвечивают лейблы
 
   &--success {
@@ -20,7 +20,6 @@
 }
 
 .popup__header {
-
   &--success {
     padding: 38px 0 40px;
   }
