стили для невалидных элементов формы

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -15,6 +15,7 @@ $bg-active: #5496bd;
 $form-border-color-mobile: #e5e5e5;
 $form-border-color-wide-screen: #dbdbdb;
 $form-interaction-color: #e5e5e5;
+$form-invalid-border-color: red;
 
 // Viewports
 $mobile-width-min: 320px;
@@ -26,3 +27,4 @@ $field-text-padding-top: 18px;
 $field-text-padding-left: 22px;
 $field-text-padding-bottom: 14px;
 $field-text-focus-border: 4px;
+$field-text-invalid-border: 2px;
