--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -51,6 +51,7 @@
 @import "layout/form/review-form.scss";
 @import "layout/form/form-group";
 @import "layout/form/field.scss";
+@import "layout/form/field-invalid.scss";
 @import "layout/form/field-icon.scss";
 @import "layout/form/checklist.scss";
 @import "layout/form/popup.scss";
