редактировал стили для невалидных элементов формы, форматирую код для проверки

--- a/source/sass/layout/form/field.scss
+++ b/source/sass/layout/form/field.scss
@@ -24,8 +24,8 @@
 
     &:focus {
       padding-top: calc(#{$field-text-padding-top} - #{$field-text-focus-border});
-      padding-left: calc(#{$field-text-padding-left} - #{$field-text-focus-border});;
-      padding-bottom: calc(#{$field-text-padding-bottom} - #{$field-text-focus-border});;
+      padding-left: calc(#{$field-text-padding-left} - #{$field-text-focus-border});
+      padding-bottom: calc(#{$field-text-padding-bottom} - #{$field-text-focus-border});
       background-color: #ffffff;
       border: $field-text-focus-border solid $form-interaction-color;
     }
