задал высоту контекстным изображениям, svg иконки лайков, изображение в video_content растягивается, размеры векторных изображений в html

--- a/source/sass/layout/index/advantage.scss
+++ b/source/sass/layout/index/advantage.scss
@@ -101,11 +101,12 @@
 
 .advantage__img {
   max-width: 100%;
-  height: auto;
+  height: 260px;
 
   @media (min-width: $tablet-width-min) {
     flex-basis: 66%;
     flex-grow: 1;
+    height: 256px;
   }
 }
 
