--- a/source/sass/layout/photo/photo-card.scss
+++ b/source/sass/layout/photo/photo-card.scss
@@ -18,11 +18,18 @@
 
 .photo-card__img {
   max-width: 100%;
-  height: auto;
+  height: 280px;
   margin-bottom: 10px;
-
+  
   @media (min-width: $tablet-width-min) {
+    height: 267px;
     margin: 0;
+  }
+
+  &--main {
+    @media (min-width: $tablet-width-min) {
+      height: 400px;
+    }
   }
 }
 
