--- a/source/sass/layout/photo/video.scss
+++ b/source/sass/layout/photo/video.scss
@@ -32,7 +32,7 @@
 }
 
 .video__content {
-  margin: 0 auto;
+  display: flex;
   line-height: 0;
 }
 
@@ -51,7 +51,12 @@
 
 .video__img {
   max-width: 100%;
-  height: auto;
+  flex-basis: 100%;
+  height: 201px;
+
+  @media (min-width: $tablet-width-min) {
+    height: 500px;
+  }
 }
 
 .video__player {
