--- a/source/sass/layout/index/advantage.scss
+++ b/source/sass/layout/index/advantage.scss
@@ -87,7 +87,6 @@
   margin-top: 0;
   margin-bottom: 0;
 
-
   &--explicit {
     color: #ffffff;
   }
@@ -100,15 +99,86 @@
 }
 
 .advantage__img {
-  max-width: 100%;
   height: 260px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: $bg-main;
+
+  &--city {
+    background-image: url("../img/main-city-mobile@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/main-city-mobile@2x.jpg");
+      background-size: 320px auto;
+    }
+
+    @media (min-width: $tablet-width-min) {
+      background-image: url("../img/main-city-tablet@1x.jpg");
+      background-size: cover;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/main-city-tablet@2x.jpg");
+      }
+    }
+
+    @media (min-width: $desktop-width-min) {
+      background-image: url("../img/main-city-desktop@1x.jpg");
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/main-city-desktop@2x.jpg");
+      }
+    }
+  }
+
+  &--bridge {
+    background-image: url("../img/main-bridge-mobile@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/main-bridge-mobile@2x.jpg");
+      background-size: 320px auto;
+    }
+
+    @media (min-width: $tablet-width-min) {
+      background-image: url("../img/main-bridge-tablet@1x.jpg");
+      background-size: cover;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/main-bridge-tablet@2x.jpg");
+      }
+    }
+
+    @media (min-width: $desktop-width-min) {
+      background-image: url("../img/main-bridge-desktop@1x.jpg");
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/main-bridge-desktop@2x.jpg");
+      }
+    }
+  }
 
   @media (min-width: $tablet-width-min) {
-    flex-basis: 66%;
-    flex-grow: 1;
+    width: 0;
     height: 256px;
+    flex-grow: 1;
   }
 }
+
+// .advantage__img {
+//   max-width: 100%;
+//   height: 260px;
+//   background-color: $bg-main;
+
+//   @media (min-width: $tablet-width-min) {
+//     height: auto;
+//   }
+// }
+
+// .advantage__img-container {
+//   @media (min-width: $tablet-width-min) {
+//     flex-grow: 1;
+//   }
+// }
 
 .advantage__details {
   display: flex;
