--- a/source/sass/layout/index/map.scss
+++ b/source/sass/layout/index/map.scss
@@ -7,9 +7,6 @@
 
 .map__content {
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  line-height: 0;
 
   &::after {
     position: absolute;
@@ -31,6 +28,32 @@
 }
 
 .map__img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 350px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: $bg-main;
+  background-image: url("../img/bg-map-mobile@1x.jpg");
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/bg-map-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    background-image: url("../img/bg-map-tablet@1x.jpg");
+    background-size: cover;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bg-map-tablet@2x.jpg");
+    }
+  }
+
+  @media (min-width: $desktop-width-min) {
+    background-image: url("../img/bg-map-desktop@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bg-map-desktop@2x.jpg");
+    }
+  }
 }
