--- a/source/sass/layout/photo/photo-card.scss
+++ b/source/sass/layout/photo/photo-card.scss
@@ -17,6 +17,7 @@
 }
 
 .photo-card__img {
+  width: 100%;
   max-width: 100%;
   height: 280px;
   margin-bottom: 10px;
@@ -24,6 +25,7 @@
   @media (min-width: $tablet-width-min) {
     height: 267px;
     margin: 0;
+    object-fit: cover;
   }
 
   &--main {
