--- a/source/sass/layout/index/intro.scss
+++ b/source/sass/layout/index/intro.scss
@@ -100,6 +100,9 @@
   margin: 0;
   padding: 0;
   margin-bottom: 27px;
+  //*pixel-perfect
+  margin-bottom: 30px;
+  line-height: 27px;
 }
 
 .intro__text {
