--- a/source/sass/layout/index/advantage.scss
+++ b/source/sass/layout/index/advantage.scss
@@ -31,12 +31,22 @@
 
 .advantage__header {
   width: 100%;
+  padding: 28px 32px 24px;
 
   &--explicit {
     background-color: $bg-second;
   }
 
+  &--city {
+    padding: 34px 0 39px;
+  }
+
+  &--bridge {
+    padding: 39px 0 35px;
+  }
+
   @media (min-width: $tablet-width-min) {
+    padding: 0;
     flex-basis: 33.33%;
     display: flex;
   }
@@ -46,8 +56,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 34px;
-  margin-bottom: 39px;
+  // margin-top: 34px;
+  // margin-bottom: 39px;
+
+  // &--bridge {
+  //   //*pixel-perfect
+  //   margin-top: 39px;
+  //   margin-bottom: 35px;
+  // }
 
   @media (min-width: $tablet-width-min) {
     flex-basis: 75%;
@@ -101,6 +117,7 @@
 .advantage__img {
   height: 260px;
   width: 100%;
+  line-height: 0;
   background-repeat: no-repeat;
   background-position: center;
   background-color: $bg-main;
@@ -164,26 +181,12 @@
   }
 }
 
-// .advantage__img {
-//   max-width: 100%;
-//   height: 260px;
-//   background-color: $bg-main;
-
-//   @media (min-width: $tablet-width-min) {
-//     height: auto;
-//   }
-// }
-
-// .advantage__img-container {
-//   @media (min-width: $tablet-width-min) {
-//     flex-grow: 1;
-//   }
-// }
-
 .advantage__details {
   display: flex;
   flex-direction: column;
   margin: 26px auto 35px;
+  //* pixel-perfect
+  margin-left: 20px;
 
   @media (min-width: $tablet-width-min) {
     flex-direction: row;
