--- a/source/sass/layout/index/booking.scss
+++ b/source/sass/layout/index/booking.scss
@@ -8,7 +8,7 @@
     max-width: 458px;
     padding: 0;
     margin-top: 57px;
-    margin-bottom: 58px;
+    margin-bottom: 60px;
   }
 
   @media (min-width: $desktop-width-min) {
@@ -34,7 +34,7 @@
   margin-bottom: 24px;
 
   @media (min-width: $tablet-width-min) {
-    margin-bottom: 25px;
+    margin-bottom: 36px;
     font-size: $font-size-wide-screen;
   }
 
@@ -47,7 +47,7 @@
   margin-top: 0;
   margin-bottom: 0;
 
-  @media (max-width: $tablet-width-min) {
+  @media (max-width: 767px) {
     br {
       display: none;
     }
