--- a/source/sass/layout/index/map.scss
+++ b/source/sass/layout/index/map.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   padding-bottom: 10px;
   background-color: $bg-main;
+
+  @media (min-width: $tablet-width-min) {
+    padding-bottom: 0;
+  }
 }
 
 .map__content {
