подгонка под pixelperfect главная desktop

--- a/source/sass/layout/index/intro.scss
+++ b/source/sass/layout/index/intro.scss
@@ -75,6 +75,8 @@
   @media (min-width: $desktop-width-min) {
     margin-top: 55px;
     margin-bottom: 41px;
+    //*pixel-perfect
+    margin-bottom: 33px;
   }
 }
 
