--- a/source/sass/layout/index/advantage.scss
+++ b/source/sass/layout/index/advantage.scss
@@ -56,11 +56,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 28px 32px 24px;
+  margin: 28px auto 24px;
 
   //*pixel-perfect
-
-
   @media (min-width: $tablet-width-min) {
     flex-basis: 75%;
     margin-top: 5px;
@@ -76,6 +74,11 @@
     @media (min-width: $tablet-width-min) {
       margin: 40px auto 44px;
     }
+
+    @media (min-width: $desktop-width-min) {
+      margin-top: 47px;
+      margin-bottom: 57px;
+    }
   }
 
   &--bridge {
@@ -83,6 +86,11 @@
 
     @media (min-width: $tablet-width-min) {
       margin: 45px auto 41px;
+    }
+
+    @media (min-width: $desktop-width-min) {
+      margin-top: 51px;
+      margin-bottom: 53px;
     }
   }
 }
