--- a/source/sass/layout/index/booking.scss
+++ b/source/sass/layout/index/booking.scss
@@ -34,12 +34,15 @@
   margin-bottom: 24px;
 
   @media (min-width: $tablet-width-min) {
+    //*pixel-perfect
     margin-bottom: 36px;
     font-size: $font-size-wide-screen;
   }
 
   @media (min-width: $desktop-width-min) {
     margin-bottom: 26px;
+    //*pixel-perfect
+    margin-bottom: 36px;
   }
 }
 
