форматирую код для проверки

--- a/source/sass/layout/index/booking.scss
+++ b/source/sass/layout/index/booking.scss
@@ -40,7 +40,7 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    margin-bottom: 26px;
+    // margin-bottom: 26px;
     //*pixel-perfect
     margin-bottom: 36px;
   }
