подгонка под pixelperfect Галерея mobile

--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -12,8 +12,8 @@ $bg-second: #81b3d2;
 $bg-field: #f2f2f2;
 $bg-hover: #669ec0;
 $bg-active: #5496bd;
-$form-border-color-mobile: #e5e5e5;
-$form-border-color-wide-screen: #dbdbdb;
+$border-color-mobile: #e5e5e5;
+$border-color-wide-screen: #dbdbdb;
 $form-interaction-color: #e5e5e5;
 $form-invalid-border-color: red;
 
