--- a/source/sass/layout/photo/photo-card.scss
+++ b/source/sass/layout/photo/photo-card.scss
@@ -20,7 +20,8 @@
   width: 100%;
   max-width: 100%;
   height: 280px;
-  margin-bottom: 10px;
+  //*pixel-perfect
+  margin-bottom: 6px;
 
   @media (min-width: $tablet-width-min) {
     height: 267px;
