--- a/source/sass/layout/form/form-group.scss
+++ b/source/sass/layout/form/form-group.scss
@@ -1,7 +1,7 @@
 .form-group {
   background-color: $bg-main;
   min-width: 0;
-  border-top: 1px solid $form-border-color-mobile;
+  border-top: 1px solid $border-color-mobile;
 
   @media (min-width: $tablet-width-min) {
     flex-basis: 100%;
@@ -14,7 +14,7 @@
       flex-basis: 50%;
       padding: 0;
       padding-left: 58px;
-      border-left: 1px solid $form-border-color-wide-screen;
+      border-left: 1px solid $border-color-wide-screen;
 
       @media (min-width: $desktop-width-min) {
         padding-left: 80px;
@@ -145,7 +145,7 @@
       flex: 1 0 auto;
       width: 19%;
       height: 1px;
-      background-color: $form-border-color-wide-screen;
+      background-color: $border-color-wide-screen;
     }
   }
 }
