--- a/source/sass/layout/photo/gallery.scss
+++ b/source/sass/layout/photo/gallery.scss
@@ -14,8 +14,8 @@
   align-items: center;
   width: 90%;
   margin: 0 auto;
-  margin-top: 32px;
-  margin-bottom: 20px;
+  margin-top: 31px;
+  margin-bottom: 33px;
 
   @media (min-width: $tablet-width-min) {
     max-width: 458px;
@@ -60,8 +60,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 22px;
-  margin-bottom: 15px;
+  padding-top: 22px;
+  //*pixel-perfect
+  padding-bottom: 7px;
+  border-top: 1px solid $border-color-mobile;
+
+  &:last-child {
+    border-bottom: 1px solid $border-color-mobile;
+  }
 
   @media (min-width: $tablet-width-min) {
     flex-basis: 50%;
