подгонка под pixelperfect Галерея tablet

--- a/source/sass/layout/photo/likes.scss
+++ b/source/sass/layout/photo/likes.scss
@@ -17,6 +17,10 @@
 .likes__icon {
   margin-right: 14px;
   cursor: pointer;
+
+  @media (min-width: $tablet-width-min) {
+    margin-right: 10px;
+  }
 }
 
 .likes__icon-img {
