--- a/source/sass/layout/photo/photo-card.scss
+++ b/source/sass/layout/photo/photo-card.scss
@@ -47,7 +47,15 @@
     align-items: center;
     align-self: auto;
     margin: 0;
-    padding: 16px 20px;
+    padding: 14px 29px 14px 20px;
+
+    &--sunset {
+      padding-right: 20px;
+    }
+
+    &--roads {
+      padding-right: 35px;
+    }
   }
 
   @media (min-width: $desktop-width-min) {
