--- a/source/sass/layout/page-intro.scss
+++ b/source/sass/layout/page-intro.scss
@@ -25,6 +25,8 @@
   @media (min-width: $tablet-width-min) {
     width: 457px;
     height: 78px;
+    margin-top: 95px;
+    margin-bottom: 60px;
   }
 
   @media (min-width: $desktop-width-min) {
