--- a/source/sass/layout/photo/gallery.scss
+++ b/source/sass/layout/photo/gallery.scss
@@ -13,21 +13,21 @@
   flex-direction: column;
   align-items: center;
   width: 90%;
-  margin: 0 auto;
-  margin-top: 31px;
-  margin-bottom: 33px;
+  margin: 31px auto;
 
   @media (min-width: $tablet-width-min) {
     max-width: 458px;
-    margin: 65px auto;
+    margin: 64px auto 78px;
   }
 }
 
 .gallery__title {
   margin-top: 0;
-  margin-bottom: 27px;
+  //*pixel-perfect
+  margin-bottom: 28px;
 
   @media (min-width: $tablet-width-min) {
+    margin-bottom: 33px;
     font-size: $font-size-wide-screen;
   }
 }
@@ -36,7 +36,7 @@
   margin: 0;
   padding: 0;
 
-  @media (max-width: $tablet-width-min) {
+  @media (max-width: 767px) {
     br {
       display: none;
     }
@@ -72,7 +72,8 @@
   @media (min-width: $tablet-width-min) {
     flex-basis: 50%;
     align-items: stretch;
-    margin: 0;
+    padding: 0;
+    border: none;
 
     &--main {
       flex-basis: 100%;
