--- a/source/sass/layout/photo/player.scss
+++ b/source/sass/layout/photo/player.scss
@@ -35,6 +35,10 @@
     @media (min-width: $tablet-width-min) {
       left: 29%;
     }
+
+    @media (min-width: $tablet-width-min) {
+      left: 21%;
+    }
   }
 
   @media (min-width: $tablet-width-min) {
