--- a/source/sass/layout/form/review.scss
+++ b/source/sass/layout/form/review.scss
@@ -22,6 +22,7 @@
   margin-bottom: 27px;
 
   @media (min-width: $tablet-width-min) {
+    margin-bottom: 30px;
     font-size: $font-size-wide-screen;
   }
 }
