--- a/source/sass/layout/form/form-group.scss
+++ b/source/sass/layout/form/form-group.scss
@@ -62,7 +62,8 @@
     }
 
     @media (min-width: $desktop-width-min) {
-      margin-bottom: 74px;
+      //*pixel-perfect
+      margin-bottom: 62px;
     }
   }
 
@@ -182,7 +183,8 @@
     }
 
     @media (min-width: $desktop-width-min) {
-      margin-left: 72px;
+      //*pixel-perfect
+      margin-left: 80px;
     }
   }
 
@@ -264,6 +266,10 @@
 
     &:nth-child(even) {
       margin-left: 30px;
+
+      @media (min-width: $desktop-width-min) {
+        margin: 0;
+      }
     }
 
     @media (min-width: $tablet-width-min) {
@@ -292,6 +298,9 @@
   }
 
   @media (min-width: $desktop-width-min) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 100%;
   }
 }
