--- a/source/sass/layout/form/review.scss
+++ b/source/sass/layout/form/review.scss
@@ -12,7 +12,8 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    margin-top: 107px;
+    //*pixel-perfect
+    margin-top: 112px;
     margin-bottom: 56px;
   }
 }
@@ -24,6 +25,10 @@
   @media (min-width: $tablet-width-min) {
     margin-bottom: 30px;
     font-size: $font-size-wide-screen;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    margin-bottom: 35px;
   }
 }
 
