--- a/source/sass/layout/photo/player.scss
+++ b/source/sass/layout/photo/player.scss
@@ -36,7 +36,7 @@
       left: 29%;
     }
 
-    @media (min-width: $tablet-width-min) {
+    @media (min-width: $desktop-width-min) {
       left: 21%;
     }
   }
