--- a/source/sass/layout/photo/video.scss
+++ b/source/sass/layout/photo/video.scss
@@ -57,9 +57,37 @@
   max-width: 100%;
   flex-basis: 100%;
   height: 201px;
+  background-image: url("../img/video-mobile@1x.jpg");
+  line-height: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: $bg-main;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/video-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
 
   @media (min-width: $tablet-width-min) {
     height: 500px;
+    background-image: url("../img/video-tablet@1x.jpg");
+    background-size: cover;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/video-tablet@2x.jpg");
+    }
+  }
+
+  @media (min-width: $desktop-width-min) {
+    background-image: url("../img/video-desktop@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/video-desktop@2x.jpg");
+    }
+
+    @media (min-width: $tablet-width-min) {
+      height: 500px;
+    }
   }
 }
 
