--- a/source/sass/layout/page-intro.scss
+++ b/source/sass/layout/page-intro.scss
@@ -7,13 +7,28 @@
   background-position: 50% 100%;
   background-color: $bg-main;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
+
   @media (min-width: $tablet-width-min) {
     height: 290px;
-    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-size: cover;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: $desktop-width-min) {
     height: 300px;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
   }
 }
 
