добавил контейнер для body + тень на desktop-е

--- a/source/sass/layout/page-header.scss
+++ b/source/sass/layout/page-header.scss
@@ -15,10 +15,9 @@
   @media (min-width: $tablet-width-min) {
     flex-direction: row;
   }
-
-  @media (min-width: $desktop-width-min) {
-    max-width: 1200px;
-  }
+  // @media (min-width: $desktop-width-min) {
+  //   max-width: 1200px;
+  // }
 }
 
 .page-header__container {
