фоновый цевет для блоков с фон. изображением

--- a/source/sass/layout/index/map.scss
+++ b/source/sass/layout/index/map.scss
@@ -36,7 +36,7 @@
   height: 350px;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: $bg-main;
+  background-color: #d5ef96;
   background-image: url("../img/bg-map-mobile@1x.jpg");
 
   @media (min-resolution: 2dppx) {
