--- a/source/sass/layout/photo/video.scss
+++ b/source/sass/layout/photo/video.scss
@@ -61,7 +61,7 @@
   line-height: 0;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: $bg-main;
+  background-color: #b89556;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/video-mobile@2x.jpg");
