--- a/source/sass/layout/index/advantage.scss
+++ b/source/sass/layout/index/advantage.scss
@@ -155,10 +155,10 @@
   line-height: 0;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: $bg-main;
 
   &--city {
     background-image: url("../img/main-city-mobile@1x.jpg");
+    background-color: #c1844b;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/main-city-mobile@2x.jpg");
@@ -185,6 +185,7 @@
 
   &--bridge {
     background-image: url("../img/main-bridge-mobile@1x.jpg");
+    background-color: #d36f49;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/main-bridge-mobile@2x.jpg");
