--- a/source/sass/layout/index/intro.scss
+++ b/source/sass/layout/index/intro.scss
@@ -11,7 +11,7 @@
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-color: $bg-main;
+  background-color: #5998cd;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
