--- a/source/sass/layout/page.scss
+++ b/source/sass/layout/page.scss
@@ -13,7 +13,10 @@
 
 .page__body-container {
   min-width: 320px;
-  max-width: 1200px;
-  margin: 0 auto;
-  box-shadow: 0 0 5px 4px rgba(0, 0, 0, 0.1);
+
+  @media (min-width: $desktop-width-min) {
+    max-width: 1200px;
+    margin: 0 auto;
+    box-shadow: 0 0 5px 4px rgba(0, 0, 0, 0.1);
+  }
 }
